# karamaan-opaleye

./: .gitignore  DESIGN.md  LICENSE  README.md  TODO.md  default.nix  karamaan-opaleye.cabal  shell.nix
Examples/: AdvancedExamples.lhs  Aggregation.hs  DefaultExplanation.lhs  Examples.hs  Examples.lhs  ImportExamples.hs  Manipulation.hs
Karamaan/Opaleye/: Aggregate.hs  AggregateSuper.hs  Aggregators.hs  Applicative.hs  ArrowLambda.hs  Bend.hs  Colspec.hs  Default.hs  DefaultExplanation.lhs  Difference.hs  Distinct.hs  Examples.hs  Examples.lhs  Explore.hs  ExprArr.hs  HaskellDB.hs  Join.hs  LeftJoin.hs  MakeExpr.hs  Manipulation.hs  ManipulationExample.hs  Nullable.hs  Operators.hs  Operators2.hs  OperatorsPrimatives.hs  Order.hs  Pack.hs  Predicates.hs  ProductProfunctor.hs  QueryArr.hs  QueryColspec.hs  Reexports.hs  ReexportsTable.hs  RunQuery.hs  SQL.hs  ShowConstant.hs  TODO  Table.hs  TableColspec.hs  Test.hs  (+5 more)
Karamaan/Opaleye/Operators/: Numeric.hs
Karamaan/Opaleye/RunQuery/: TH.hs
Karamaan/Opaleye/ShowConstant/: TH.hs
Test/: Test.hs
