name:     karamaan-opaleye
version:  0.17
synopsis: A relational query language for Haskell
author:   Purely Agile
build-type: Simple
cabal-version: >= 1.2
              -- 'AllRightsReserved'
License:      OtherLicense
License-File: LICENSE

library
  build-depends:   base >= 4 && < 5, time >= 1.4 && < 1.5,
                   haskelldb == 2.2.2.0.0.0.2, karamaan-whaleutil >= 0.10,
                   -- vv mtl just for the State monad in Values.
                   -- Remove this dependency when we write our own monad.
                   mtl >= 2.1 && < 2.2, profunctors >= 4.0 && < 4.1,
                   contravariant >= 0.4 && < 0.5, product-profunctors >= 0.1,
                   -- vv This is just for RunQuery.  If we ever move
                   -- RunQuery elsewhere we should remove this dependency.
                   postgresql-simple >= 0.3 && < 0.4,
                   -- Just needed for the FromRow reification stuff
                   tagged >= 0.7 && < 0.8, reflection >= 1.3 && < 1.4,
                   containers >= 0.4 && < 0.5
  exposed-modules: Karamaan.Opaleye.Aggregate,
                   Karamaan.Opaleye.Applicative,
                   Karamaan.Opaleye.Bend,
                   Karamaan.Opaleye.Distinct,
                   Karamaan.Opaleye.Default,
                   Karamaan.Opaleye.Explore,
                   Karamaan.Opaleye.Examples,
                   Karamaan.Opaleye.ExprArr,
                   Karamaan.Opaleye.Join,
                   Karamaan.Opaleye.LeftJoin,
                   Karamaan.Opaleye.Manipulation,
                   Karamaan.Opaleye.Operators,
                   Karamaan.Opaleye.Operators2,
                   Karamaan.Opaleye.Operators.Numeric,
                   Karamaan.Opaleye.Predicates,
                   Karamaan.Opaleye.QueryArr,
                   Karamaan.Opaleye.QueryColspec,
                   Karamaan.Opaleye.RunQuery,
                   Karamaan.Opaleye.Reexports,
                   Karamaan.Opaleye.ReexportsTable,
                   Karamaan.Opaleye.SQL,
                   Karamaan.Opaleye.Table,
                   Karamaan.Opaleye.TableColspec,
                   Karamaan.Opaleye.Wire,
                   Karamaan.Opaleye.Unpackspec,
                   Karamaan.Opaleye.Values
  ghc-options:     -Wall
