name:     karamaan-opaleye
version:  0.22
synopsis: A relational query language for Haskell
author:   Purely Agile
build-type: Simple
cabal-version: >= 1.2
License:      OtherLicense
License-File: LICENSE

library

  build-depends:
      base               >= 4   && < 5
    , containers         >= 0.4 && < 0.6
    , contravariant      >= 0.4 && < 0.7
    , karamaan-plankton  >= 0.1 && < 0.3
    , haskelldb          == 2.2.2.0.0.0.3
      -- vv mtl just for the State monad in Values.
      -- Remove this dependency when we write our own monad.
    , mtl >= 2.1 && < 2.2
      -- vv This is just for RunQuery.  If we ever move
      -- RunQuery elsewhere we should remove this dependency.
    , postgresql-simple   >= 0.3 && < 0.5
    , pretty              >= 1.0 && < 1.2
    , product-profunctors >= 0.4 && < 0.5
    , profunctors         >= 4.0 && < 4.1
      -- Just needed for the FromRow reification stuff
    , reflection >= 1.3 && < 1.5
    , tagged     >= 0.7 && < 0.8
    , time       >= 1.4 && < 1.5
    , text       >= 0.11 && < 1.2

  exposed-modules: Karamaan.Opaleye.Aggregate,
                   Karamaan.Opaleye.ArrowLambda,
                   Karamaan.Opaleye.Bend,
                   Karamaan.Opaleye.Difference,
                   Karamaan.Opaleye.Distinct,
                   Karamaan.Opaleye.Explore,
                   Karamaan.Opaleye.Examples,
                   Karamaan.Opaleye.ExprArr,
                   Karamaan.Opaleye.HaskellDB,
                   Karamaan.Opaleye.Join,
                   Karamaan.Opaleye.LeftJoin,
                   Karamaan.Opaleye.Manipulation,
                   Karamaan.Opaleye.ManipulationExample,
                   Karamaan.Opaleye.Nullable,
                   Karamaan.Opaleye.Operators,
                   Karamaan.Opaleye.Operators2,
                   Karamaan.Opaleye.OperatorsPrimatives,
                   Karamaan.Opaleye.Operators.Numeric,
                   Karamaan.Opaleye.Predicates,
                   Karamaan.Opaleye.QueryArr,
                   Karamaan.Opaleye.QueryColspec,
                   Karamaan.Opaleye.RunQuery,
                   Karamaan.Opaleye.Reexports,
                   Karamaan.Opaleye.ReexportsTable,
                   Karamaan.Opaleye.SQL,
                   Karamaan.Opaleye.Table,
                   Karamaan.Opaleye.TableColspec,
                   Karamaan.Opaleye.Use,
                   Karamaan.Opaleye.Wire,
                   Karamaan.Opaleye.Unpackspec,
                   Karamaan.Opaleye.Values
  ghc-options:     -Wall
