name:     karamaan-opaleye
version:  0.24
synopsis: A relational query language for Haskell
author:   Purely Agile
build-type: Simple
cabal-version: >= 1.8
License:      OtherLicense
License-File: LICENSE

library

  build-depends:
      base               >= 4   && < 5
    , containers         >= 0.4 && < 0.6
    , contravariant      >= 0.4 && < 1.3
    , karamaan-plankton  >= 0.1 && < 0.4
    , haskelldb          == 2.2.2.0.0.0.3
      -- vv mtl just for the State monad in Values.
      -- Remove this dependency when we write our own monad.
    , mtl >= 2.1 && < 2.3
      -- vv This is just for RunQuery.  If we ever move
      -- RunQuery elsewhere we should remove this dependency.
    , old-locale          == 1.0.*
    , postgresql-simple   >= 0.3 && < 0.5
    , pretty              >= 1.0 && < 1.2
    , product-profunctors >= 0.5 && < 0.6
    , profunctors         >= 4.0 && < 4.3
      -- Just needed for the FromRow reification stuff
    , reflection >= 1.3 && < 1.6
    , tagged     >= 0.7 && < 0.8
    , template-haskell
    , time       >= 1.4 && < 1.5
    , text       >= 0.11 && < 1.2
    , uuid       == 1.3.*

  exposed-modules: Karamaan.Opaleye.Aggregate,
                   Karamaan.Opaleye.ArrowLambda,
                   Karamaan.Opaleye.Bend,
                   Karamaan.Opaleye.Difference,
                   Karamaan.Opaleye.Distinct,
                   Karamaan.Opaleye.Explore,
                   Karamaan.Opaleye.ExprArr,
                   Karamaan.Opaleye.HaskellDB,
                   Karamaan.Opaleye.Join,
                   Karamaan.Opaleye.LeftJoin,
                   Karamaan.Opaleye.MakeExpr,
                   Karamaan.Opaleye.Manipulation,
                   Karamaan.Opaleye.Nullable,
                   Karamaan.Opaleye.Operators,
                   Karamaan.Opaleye.Operators2,
                   Karamaan.Opaleye.OperatorsPrimatives,
                   Karamaan.Opaleye.Operators.Numeric,
                   Karamaan.Opaleye.Order
                   Karamaan.Opaleye.Predicates,
                   Karamaan.Opaleye.QueryArr,
                   Karamaan.Opaleye.QueryColspec,
                   Karamaan.Opaleye.RunQuery,
                   Karamaan.Opaleye.RunQuery.TH,
                   Karamaan.Opaleye.Reexports,
                   Karamaan.Opaleye.ReexportsTable,
                   Karamaan.Opaleye.ShowConstant,
                   Karamaan.Opaleye.ShowConstant.TH,
                   Karamaan.Opaleye.SQL,
                   Karamaan.Opaleye.Table,
                   Karamaan.Opaleye.TableColspec,
                   Karamaan.Opaleye.Use,
                   Karamaan.Opaleye.Wire,
                   Karamaan.Opaleye.Unpackspec,
                   Karamaan.Opaleye.Values
  ghc-options:     -Wall

test-suite examples
  type: exitcode-stdio-1.0
  main-is: ImportExamples.hs
  hs-source-dirs: Examples
  build-depends:
    base >= 4 && < 5,
    postgresql-simple,
    product-profunctors,
    profunctors,
    time,
    karamaan-opaleye
